lab3/mainfests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: lab3
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
