lab3/mainfests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt
    cert-manager.io/private-key-rotation-policy: Always
    cert-manager.io/revision-history-limit: "3"
  name: frontend
  namespace: lab3
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.sandbox.itmo.online
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - frontend.sandbox.itmo.online
      secretName: frontend-sandbox-itmo-online-tls
